Fix text wrapping

--- a/src/styles/pages/_blog-page.scss
+++ b/src/styles/pages/_blog-page.scss
@@ -87,7 +87,7 @@ main {
       font-family: Arial, Helvetica, sans-serif;
       &.poem {
         font-family: "Courier New", Courier, monospace;
-        white-space: pre;
+        white-space-collapse: preserve-breaks;
         text-wrap: wrap;
         padding-top: 25px;
       }
